# leptos-chartistry

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  examples  flake.nix  index.html
.github/workflows/: deploy-pages.yml  nix-flake-check.yml  pages.yml
demo/: Cargo.toml  Trunk.toml  build.rs  index.html  release
demo/assets/: demo.css  modern-normalize.css
demo/src/: app.rs  lib.rs  main.rs
demo/src/data/: mod.rs  sunspots.rs
demo/src/examples/: aspect_sunspots.rs  edge_layout.rs  edge_legend.rs  edge_rotated_label.rs  edge_tick_labels.rs  feature_colours.rs  feature_css.rs  feature_dark_background.rs  feature_line_gradient.rs  feature_markers.rs  feature_markers_2.rs  feature_tooltip.rs  inner_axis_marker.rs  inner_grid_line.rs  inner_guide_line.rs  inner_layout.rs  inner_legend.rs  interpolation_mixed.rs  interpolation_stepped.rs  mod.rs  series_bar.rs  series_line.rs  series_line_stack.rs
demo/src/pages/: demo.rs  examples.rs  mod.rs
demo/src/pages/examples/: all_examples.rs  mod.rs  series_line.rs
docs/: demo-22186d574dcc88a.js  demo-22186d574dcc88a_bg.wasm  demo-9b0182a04351fbb4.js  demo-9b0182a04351fbb4_bg.wasm  demo-ad66c0b67084859d.js  demo-ad66c0b67084859d_bg.wasm  demo-d0f11e69a23b388c.js  demo-d0f11e69a23b388c_bg.wasm  developers.md  index.html
docs/assets/: demo.css
examples/: README.md
examples/ssr/: Cargo.toml  README.md
examples/ssr/src/: app.rs  fallback.rs  lib.rs  main.rs
issue-52/: Cargo.toml  Trunk.toml  index.html
issue-52/src/: lib.rs  main.rs
leptos-chartistry/: Cargo.toml
leptos-chartistry/src/: aspect_ratio.rs  bounds.rs  chart.rs  colours.rs  debug.rs  edge.rs  font.rs  lib.rs  padding.rs  projection.rs  state.rs  use_watched_node.rs
leptos-chartistry/src/colours/: colourmaps.rs  mod.rs  scheme.rs
leptos-chartistry/src/inner/: axis_marker.rs  grid_line.rs  guide_line.rs  legend.rs  mod.rs
leptos-chartistry/src/layout/: compose.rs  legend.rs  mod.rs  rotated_label.rs  tick_labels.rs
leptos-chartistry/src/overlay/: mod.rs  tooltip.rs  tooltip_style.rs
leptos-chartistry/src/series/: bar.rs  line.rs  mod.rs  stack.rs  use_data.rs  use_y.rs
leptos-chartistry/src/series/line/: interpolation.rs  marker.rs  mod.rs
leptos-chartistry/src/series/use_data/: data.rs  mod.rs  range.rs  values.rs
leptos-chartistry/src/ticks/: mod.rs
site/: Cargo.toml  index.html
src/: aspect_ratio.rs  bounds.rs  chart.rs  colours.rs  compose.rs  debug.rs  edge.rs  font.rs  layout.rs  lib.rs  line.rs  main.rs  padding.rs  projection.rs  rotated_label.rs  series.rs  state.rs  use_watched_node.rs
src/colours/: colourmaps.rs  mod.rs
src/inner/: axis_marker.rs  grid_line.rs  guide_line.rs  legend.rs  mod.rs  options.rs
src/layout/: compose.rs  layout.rs  legend.rs  mod.rs  rotated_label.rs  snippet.rs  tick_labels.rs
src/overlay/: layout.rs  mod.rs  tooltip.rs
src/series/: data.rs  line.rs  mod.rs  stack.rs  use_data.rs  use_series.rs
src/ticks/: aligned_floats.rs  gen.rs  mod.rs  timestamps.rs  use_ticks.rs
