[workspace]
resolver = "2"
members = [ "demo", "leptos-chartistry" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[patch.crates-io]
# Patch all crates found in the Leptos members list
oco_ref = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
any_spawner = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
const_str_slice_concat = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
either_of = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
next_tuple = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
or_poisoned = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
hydration_context = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_dom = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_config = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_hot_reload = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_macro = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_server = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
reactive_graph = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
reactive_stores = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
reactive_stores_macro = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
server_fn = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
server_fn_macro = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
server_fn_macro_default = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
tachys = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_actix = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_axum = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_integration_utils = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
leptos_router_macro = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
throw_error = { git = "https://github.com/leptos-rs/leptos.git", branch = "component-erasure" }
