[workspace]
resolver = "2"
members = [ "demo", "examples/ssr", "leptos-chartistry" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# Compile times have exploded and sometimes result in wasm linker errors with Leptos 0.8. This reduces the impact.
[profile.dev]
debug = false
