[package]
name = "demo"
version = "0.0.0"
edition = "2021"
description = "Chartistry demo site"
authors = [ "Joshua McQuistan <joshua.mcquistan@feral.io>" ]
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
leptos-chartistry = { path = "../leptos-chartistry" }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos-use = "0.10"
log = "0.4"
web-sys = "0.3"
