[package]
name = "demo"
version = "0.0.0"
edition = "2021"
description = "Chartistry demo site"
authors = [ "Joshua McQuistan <joshua.mcquistan@feral.io>" ]
license = "MPL-2.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
syntect = "5.0"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "=0.7.0-beta", features = ["csr"] }
leptos-chartistry = { path = "../leptos-chartistry" }
leptos_meta.version = "=0.7.0-beta"
leptos_router.version = "=0.7.0-beta"
leptos-use = "0.10"
log = "0.4"
strum = { version = "0.26.2", features = ["derive"] }
web-sys = "0.3"
