[package]
name = "demo"
version = "0.0.0"
edition = "2021"
description = "Chartistry demo site"
authors = [ "Joshua McQuistan <joshua.mcquistan@feral.io>" ]
license = "MPL-2.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
syntect = "5.0"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "=0.7.0-beta5", features = ["csr"] }
leptos-chartistry = { path = "../leptos-chartistry" }
leptos_meta.version = "=0.7.0-beta5"
leptos_router.version = "=0.7.0-beta5"
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7" }
log = "0.4"
strum = { version = "0.26.2", features = ["derive"] }
web-sys = "0.3"

# Pinned. Must also be specified in flake.nix
wasm-bindgen = "= 0.2.93"
