[package]
name = "leptos-chartistry"
version = "0.1.6"
authors = [ "Joshua McQuistan <joshua.mcquistan@feral.io>" ]
edition = "2021"
description = "Chartistry is a charting library for Leptos"
homepage = "https://feral-dot-io.github.io/leptos-chartistry/"
documentation = "https://docs.rs/leptos-chartistry"
repository = "https://github.com/feral-dot-io/leptos-chartistry"
readme = "../README.md"
license = "MPL-2.0"
keywords = [ "leptos", "wasm", "charts" ]
categories = [ "graphics", "gui", "wasm", "web-programming" ]

[dependencies]
chrono = "0.4"
leptos = "=0.7.0-beta"
leptos-use = "0.10"
log = "0.4"
web-sys = { version = "0.3", features = ["DomRectReadOnly"] }
