[package]
name = "chartistry-site"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos = { version = "0.6", features = ["csr"] }
leptos-chartistry = { path = ".." }
leptos_meta = { version = "0.6", features = ["csr"] }
log = "0.4"
