[package]
name = "my_example_ssr"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos = "0.8"
leptos_axum = { version = "0.8", optional = true }
# Use leptos_chartistry.version = "..." instead
leptos-chartistry.path = "../../leptos-chartistry"
leptos_meta = "0.8"
leptos_router.version = "0.8"
leptos-use = "0.16.0-beta2"
log = "0.4"
tokio = { version = "1.42", features = [ "full" ], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = "0.2.100"

[features]
hydrate = [
  "leptos/hydrate",
]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tower",
  "dep:tower-http",
  "dep:tokio",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos-use/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]
